--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-24  Art Haas  <ahaas@neosoft.com>
+
+	* doc/extend.texi (Other Builtins): Change `...' to `@dots{}'.
+	* doc/tm.texi (Frame Layout): Likewise.
+
 2002-06-20  Steve Ellcey  <sje@cup.hp.com>
 	* gcc/config.gcc (ia64*-*-hpux*): Set use_collect2 to no.
 	Set float_format to i128.
