* sh.h (FUNCTION_ARG_ADVANCE): Take SHCOMPACT_FORCE_ON_STACK 	arguments into account for stack_regs.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54961 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jun 24 18:53:56 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* sh.h (FUNCTION_ARG_ADVANCE): Take SHCOMPACT_FORCE_ON_STACK
+	arguments into account for stack_regs.
+
 2002-06-24  Matt Kraai  <kraai@alumni.cmu.edu>
 
 	* doc/extend.texi: Change `@dots{}' to `/* @r{@dots{}} */'
