* verify.cc (branch_prepass): Updated for change to exception 	handler type. 	(verify_instructions_0): Likewise. 	* defineclass.cc (handleCodeAttribute): Initialize `prepared'. 	(handleExceptionTableEntry): Updated for change to exception 	handler type. 	* java/lang/Class.h (Class): Removed _Jv_InterpMethodInvocation. 	* include/java-interp.h (_Jv_InterpMethodInvocation): Removed. 	(union _Jv_InterpPC): New. 	(class _Jv_InterpException): Changed types to _Jv_InterpPC. 	(class _Jv_InterpMethod): Added new `prepared' field. 	(class _Jv_InterpMethod): Added `compile' method.  Removed 	`continue1' and `find_exception'.  Changed arguments to `run'. 	* interpret.cc (union insn_slot): New. 	(find_exception): Removed. 	(run_normal): Removed most logic. 	(run_synch_object): Likewise; also, use JvSynchronize. 	(run_synch_class): Likewise. 	(run): Removed. 	(continue1): Renamed as `run'.  Compile bytecode if required. 	Add new code to allow refinement of direct-threaded code at 	runtime.  Handle exceptions. 	(SAVE_PC): Removed. 	(compile): New method. 	(SET_ONE, SET_INSN, SET_INT, SET_DATUM): New defines. 	(NULLARRAYCHECK): Don't use SAVE_PC. 	(pc_t): New typedef. 	(TAKE_GOTO, GET1S, GET1U, GET2U, AVAL1U, AVAL2U, AVAL2UP, 	SKIP_GOTO, GOTO_VAL, PCVAL, AMPAMP): New macros.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54968 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,35 @@
+2002-06-24  Tom Tromey  <tromey@redhat.com>
+
+	* verify.cc (branch_prepass): Updated for change to exception
+	handler type.
+	(verify_instructions_0): Likewise.
+	* defineclass.cc (handleCodeAttribute): Initialize `prepared'.
+	(handleExceptionTableEntry): Updated for change to exception
+	handler type.
+	* java/lang/Class.h (Class): Removed _Jv_InterpMethodInvocation.
+	* include/java-interp.h (_Jv_InterpMethodInvocation): Removed.
+	(union _Jv_InterpPC): New.
+	(class _Jv_InterpException): Changed types to _Jv_InterpPC.
+	(class _Jv_InterpMethod): Added new `prepared' field.
+	(class _Jv_InterpMethod): Added `compile' method.  Removed
+	`continue1' and `find_exception'.  Changed arguments to `run'.
+	* interpret.cc (union insn_slot): New.
+	(find_exception): Removed.
+	(run_normal): Removed most logic.
+	(run_synch_object): Likewise; also, use JvSynchronize.
+	(run_synch_class): Likewise.
+	(run): Removed.
+	(continue1): Renamed as `run'.  Compile bytecode if required.
+	Add new code to allow refinement of direct-threaded code at
+	runtime.  Handle exceptions.
+	(SAVE_PC): Removed.
+	(compile): New method.
+	(SET_ONE, SET_INSN, SET_INT, SET_DATUM): New defines.
+	(NULLARRAYCHECK): Don't use SAVE_PC.
+	(pc_t): New typedef.
+	(TAKE_GOTO, GET1S, GET1U, GET2U, AVAL1U, AVAL2U, AVAL2UP,
+	SKIP_GOTO, GOTO_VAL, PCVAL, AMPAMP): New macros.
+
 2002-06-23  Tom Tromey  <tromey@redhat.com>
 
 	* configure: Rebuilt.
