* mips.md (fixuns_truncdfsi2, fixuns_truncdfdi2, 	fixuns_truncsfsi2, fixuns_truncsfdi2): Avoid automatic aggregate 	initialization.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54975 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-24  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* mips.md (fixuns_truncdfsi2, fixuns_truncdfdi2,
+	fixuns_truncsfsi2, fixuns_truncsfdi2): Avoid automatic aggregate
+	initialization.
+
 2002-06-24  Jeff Law <law@redhat.com>
 
 	* flow.c (propagate_one_insn): When removing an insn
