gcc: 	* Makefile.in (SHELL): Set to @SHELL@. 	* fixinc/Makefile.in (SHELL): Likewise.
gcc/ada:
	* Makefile.in (SHELL): Set to @SHELL@.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54976 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2002-06-24  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
+	* Makefile.in (SHELL): Set to @SHELL@.
+	* fixinc/Makefile.in (SHELL): Likewise.
+
 	* mips.md (fixuns_truncdfsi2, fixuns_truncdfdi2,
 	fixuns_truncsfsi2, fixuns_truncsfdi2): Avoid automatic aggregate
 	initialization.
