--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-06-25  Neil Booth  <neil@daikokuya.co.uk>
+
+	* cpplib.c (do_include_common): Revert to correct line number
+	if -traditional.
+	* cpptrad.c (scan_out_logical_line): Treat null directive as
+	white space.  Invlidate MI optimization for non-whitespace
+	text outside a directive.
+
 2002-06-24  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* Makefile.in (SHELL): Set to @SHELL@.
