--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-25  David S. Miller  <davem@redhat.com>
+
+	* config/sparc/sparc.md: Change \\{t,n} to \{t,n}.
+
 2002-06-25  Neil Booth  <neil@daikokuya.co.uk>
 
 	* cpplib.c (do_include_common): Revert to correct line number
