optabs.c (expand_vector_binop, [...]): Don't assume GET_MODE_UNIT_SIZE (mode) == UNITS_PER_WORD.
gcc:
	* optabs.c (expand_vector_binop, expand_vector_unop): Don't assume
	GET_MODE_UNIT_SIZE (mode) == UNITS_PER_WORD.
gcc/testsuite:
	* gcc.c-torture/execute/simd-2.c: New test.

From-SVN: r54994

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jun 25 21:50:38 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* gcc.c-torture/execute/simd-2.c: New test.
+
 2002-06-25  Neil Booth  <neil@daikokuya.co.uk>
 
 	* gcc.dg/cpp/mi7.c, gcc.dg/cpp/mi7a.h, gcc.dg/cpp/mi7b.h,
