--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,7 @@
-Tue Jun 25 20:59:56 2002  J"orn Rennecke <joern.rennecke@superh.com>
+Tue Jun 25 21:51:13 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* optabs.c (expand_vector_binop, expand_vector_unop): Don't assume
+	GET_MODE_UNIT_SIZE (mode) == UNITS_PER_WORD.
 
 	* config/sh/lib1funcs.asm (udivdi3): Make first divide step 
 	produce a 32 bit result before normalization, then normalize with a
