--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-25  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* config/alpha/alpha.h (TARGET_CPU_CPP_BUILTINS): Remove leading
+	underscore from __IEEE_FP and __IEEE_FP_INEXACT.
+
 2002-06-25  Aldy Hernandez  <aldyh@redhat.com>
 
         * doc/extend.texi (PowerPC AltiVec Built-in Functions): Document
