--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-25  Loren J. Rittle  <ljrittle@acm.org>
+
+	* doc/extend.texi: Fix formatting of last checkin.
+
 2002-06-25  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* config/alpha/alpha.h (TARGET_CPU_CPP_BUILTINS): Remove leading
