--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-25  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* gcc.c (warn_std): Delete.
+
 2002-06-25  Loren J. Rittle  <ljrittle@acm.org>
 
 	* doc/extend.texi: Fix formatting of last checkin.
