--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-26  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* config.gcc (vax-*-vms*): Make obselete.
+
 2002-06-25  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* gcc.c (warn_std): Delete.
