--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-26  Aldy Hernandez  <aldyh@redhat.com>
+
+        * config/rs6000/rs6000.h (ALTIVEC_VECTOR_MODE): Revert change to
+        check for TARGET_ALTIVEC.
+
 2002-06-26  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	* config.gcc (vax-*-vms*): Make obselete.
