--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-26  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* varasm.c: Include real.h before output.h.
+
 2002-06-26  Aldy Hernandez  <aldyh@redhat.com>
 
         * config/rs6000/rs6000.h (ALTIVEC_VECTOR_MODE): Revert change to
