shelf.sh (STACK_ADDR): Don't define.
ld:
        * emulparams/shelf.sh (STACK_ADDR): Don't define.
        (OTHER_SECTIONS): Define.
        * emulparams/shelf_nbsd.sh ((STACK_ADDR): Don't undef.
        (OTHER_SECTIONS): Undef.
newlib:
        * libc/sys/sh/crt0.S: Remove vestigial .section directive.
gcc:
        * config/sh/crt1.asm: remove _stack label definition
        and sentinel value.

From-SVN: r55011

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jun 26 16:32:57 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* config/sh/crt1.asm: remove _stack label definition
+	and sentinel value.
+
 2002-06-26  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* varasm.c: Include real.h before output.h.
