--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-26  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* lex.c (java_read_char): Avoid "comparison is always true"
+	warning.
+
 2002-06-25  Andreas Schwab  <schwab@suse.de>
 
 	* expr.c (JSR): Avoid undefined operation on PC.
