* mips.c (coprocessor_operand, coprocessor2_operand, 	symbolic_operand): Move prototypes from here... 	* mips-protos.h (coprocessor_operand, coprocessor2_operand, 	symbolic_operand): ...to here.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55018 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-06-26  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* mips.c (coprocessor_operand, coprocessor2_operand,
+	symbolic_operand): Move prototypes from here...
+	* mips-protos.h (coprocessor_operand, coprocessor2_operand,
+	symbolic_operand): ...to here.
+
 Wed Jun 26 16:32:57 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* config/sh/crt1.asm: remove _stack label definition
