re PR preprocessor/7070 (internal error with -Wunknown-pragmas && empty #pragma)
	PR preprocessor/7070
	* c-lex.c (cb_def_pragma): Don't try to spell CPP_EOF.
testsuite:
	* gcc.dg/Wunknownprag.c: New tests.

From-SVN: r55021

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-27  Neil Booth  <neil@daikokuya.co.uk>
+
+	PR preprocessor/7070
+	* c-lex.c (cb_def_pragma): Don't try to spell CPP_EOF.
+
 2002-06-26  Bob Wilson  <bob.wilson@acm.org>
 
 	* config/xtensa/xtensa-protos.h (xtensa_return_addr): Declare.
