--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-26  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* config.if (libstdcxx_incdir): Version C++ headers.
+	(cxx_incdir): Remove. 
+
 2002-06-25  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	* MAINTAINERS (Write After Approval): Add self.
