--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-27  Daniel Berlin  <dberlin@dberlin.org>
+
+	* gcse.c (hoist_code): Rewrite to only get list of dominated
+	blocks once per BB. Also fix reversed test (by removing need for 
+	the test at all).
+
 2002-06-27  Neil Booth  <neil@daikokuya.co.uk>
 
 	* cpphash.h (_cpp_set_trad_context): Remove.
