--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-27  Matt Kraai  <kraai@alumni.cmu.edu>
+
+	* doc/install.texi: Change ` bit' to `-bit'.
+	* doc/md.texi: Change `-bits' to `-bit'.
+	* doc/tm.texi: Change `-bits' to ` bits'.
+	
 2002-06-24  David S. Miller  <davem@redhat.com>
 
 	* config/sparc/sparc.h (INIT_TARGET_OPTABS): If ARCH64, set the
